--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
           <a href="./informacion/bases/torneos.html">Bases de Torneos</a> 
        </div>
        <div>
-        <a href="./informacion/bases/concurso.html">Bases de Cocursos</a> 
+        <a href="./informacion/bases/concursos.html">Bases de Concursos</a> 
      </div>
         </div>
         <div class="colabout">
