--- a/localizacion/localizacion.html
+++ b/localizacion/localizacion.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <!-- Font Roboto -->
-      <link
+    <!-- Font Roboto -->
+    <link
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
@@ -18,7 +18,9 @@
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../index.html"><img src="../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../index.html"
+            ><img src="../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -57,7 +59,6 @@
           </div>
         </div>
       </div>
-    </div>
     </header>
     <main>
       <div class="main">
@@ -70,43 +71,91 @@
         <div class="titleBox">
           <div id="title">
             <span>Localización</span>
+          </div>
+        </div>
+        <div class="content">
+          <article>
+            <h1>
+              Información del recinto
+            </h1>
+            <p>
+              El Complejo Deportivo, situada en el marco natural e incomparable
+              de Puerto Real, es un espacio con identidad propia. Ha
+              integrado su singularidad a numerosos actos privados y
+              corporativos, sorprendiendo y maravillando a los asistentes de
+              estos eventos. Con 300 m<sup>2</sup> repartidos en 3 plazas en diferentes
+              niveles. 
+            </p>
+            <p>
+              Un espacio ideal para la celebración de actos al aire
+              libre como recepciones, cenas o exhibiciones deportivas, así como
+              también sesiones fotográficas, debido a que se trata de un espacio
+              emblemático con unas vistas panorámicas únicas.
+            </p>
+          </article>
+          <article>
+            <h1>
+              Medios de transporte disponibles
+            </h1>
+            <ul>
+              <li>
+                Tren. Con disponibilidad de horarios visitando:
+                <a href="https://www.renfe.com/">https://www.renfe.com/</a>
+              </li>
+              <li>
+                Autobús. Con disponibilidad de horarios visitando:
+                <a href="http://www.cmtbc.es/">http://www.cmtbc.es/</a>
+              </li>
+            </ul>
+          </article>
+          <article>
+            <h1>
+              Mapa del recinto
+            </h1>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d708.0696295591271!2d-6.2110758981924015!3d36.52875769009336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0dcddc00bacbcb%3A0x2c9500fa5e5dfdb6!2sComplejo%20Deportivo!5e1!3m2!1ses!2ses!4v1583777800908!5m2!1ses!2ses"
+              frameborder="0"
+              allowfullscreen="true"
+            ></iframe>
+          </article>
         </div>
       </div>
-      <div class = "content">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d708.0696295591271!2d-6.2110758981924015!3d36.52875769009336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0dcddc00bacbcb%3A0x2c9500fa5e5dfdb6!2sComplejo%20Deportivo!5e1!3m2!1ses!2ses!4v1583777800908!5m2!1ses!2ses" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-      </div></div>
     </main>
     <footer>
       <div class="footer">
         <div class="about">
-        <div class="colabout">
-        <div>
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-          >Contactar por correo</a
-        >
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./informacion/invitados.html">Contratación de stands</a>
+            </div>
+          </div>
         </div>
-        <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
-        </div>
-        <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
-       </div>
-       </div>
-        <div class="colabout">
-          <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
-         </div>
-        </div>
-      </div>
-       <div class="contacto">
-        <div class="contactos">
+        <div class="contacto">
+          <div class="contactos">
             <img id="iconos" src="../images/iconos/rss.png" alt="RSS" />
             <img id="iconos" src="../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../images/iconos/facebook.png" alt="Facebook" />
+            <img
+              id="iconos"
+              src="../images/iconos/facebook.png"
+              alt="Facebook"
+            />
             <img id="iconos" src="../images/iconos/insta.png" alt="Instagram" />
-        </div>
-        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-      </div>
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
