--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -3,21 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Font Roboto -->
-     <link
-     href="https://fonts.googleapis.com/css?family=Roboto"
-     rel="stylesheet"
-   />
-   <link rel="stylesheet" href="../css/actividades.css" />
-   <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../css/layout.css" />
-   <title>MANGUCA</title>
+    <!-- Font Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/actividades.css" />
+    <!-- CSS Main Layout-->
+    <link rel="stylesheet" href="../css/layout.css" />
+    <title>MANGUCA</title>
   </head>
   <body>
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../index.html"><img src="../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../index.html"
+            ><img src="../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -56,8 +58,6 @@
           </div>
         </div>
       </div>
-    </div>
-    
     </header>
     <main>
       <div class="main">
@@ -69,89 +69,113 @@
         </div>
         <div class="titleBox">
           <div id="title">
-          <span>Actividades</span>
+            <span>Actividades</span>
           </div>
         </div>
         <div class="activity">
           <img id="miniature" src="../images/actividades/activity1.png" />
-          <div class = "text">
+          <div class="text">
             <div id="rol">
               <p>Música</p>
             </div>
             <div id="titlesActivity">
-            FAKI
+              FAKI
             </div>
             <div id="description">
-                <p>El grupo de pop que más lo está petando en Japón, con doble concierto por primera vez en Europa.</p>
+              <p>
+                El grupo de pop que más lo está petando en Japón, con doble
+                concierto por primera vez en Europa.
+              </p>
             </div>
           </div>
-          </div>
+        </div>
 
-          <div class="activity" id="invert">
-            <img id="miniatureInvert" src="../images/actividades/activity2.jpg" />
-            <div class = "text" id="textInvert">
-              <div id="rol">
-                <p>Música</p>
-              </div>
-              <div id="titlesActivity">
-                FAKI
-              </div>
-              <div id="description">
-                  <p>El grupo de pop que más lo está petando en Japón, con doble concierto por primera vez en Europa.</p>
-              </div>
+        <div class="activity" id="invert">
+          <img id="miniatureInvert" src="../images/actividades/activity2.jpg" />
+          <div class="text" id="textInvert">
+            <div id="rol">
+              <p>Música</p>
             </div>
-         </div>
-          <div class="activity">
-            <img id="miniature" src="../images/actividades/activity3.png" />
-            <div class = "text">
-              <div id="rol">
-                <p>Música</p>
-              </div>
-              <div id="titlesActivity">
-                FAKI
-              </div>
-              <div id="description">
-                  <p>El grupo de pop que más lo está petando en Japón, con doble concierto por primera vez en Europa.</p>
-              </div>
+            <div id="titlesActivity">
+              FAKI
+            </div>
+            <div id="description">
+              <p>
+                El grupo de pop que más lo está petando en Japón, con doble
+                concierto por primera vez en Europa.
+              </p>
             </div>
           </div>
-       
+        </div>
+        <div class="activity">
+          <img id="miniature" src="../images/actividades/activity3.png" />
+          <div class="text">
+            <div id="rol">
+              <p>Música</p>
+            </div>
+            <div id="titlesActivity">
+              FAKI
+            </div>
+            <div id="description">
+              <p>
+                El grupo de pop que más lo está petando en Japón, con doble
+                concierto por primera vez en Europa.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-  </main>
-  <footer>
-    <div class="footer">
-      <div class="about">
-      <div class="colabout">
-      <div>
-        <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-        >Contactar por correo</a
-      >
+    </main>
+    <footer>
+      <div class="footer">
+        <div class="about">
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="../informacion/invitados.html">Contratación de stands</a>
+            </div>
+            <div>
+              <a href="./bases/torneos.html">Bases de Torneos</a>
+            </div>
+            <div>
+              <a href="./bases/concursos.html">Bases de Concursos</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./bases/politica.html"
+                >Política de privacidad y protección de datos</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="contacto">
+          <div class="contactos">
+            <img id="iconos" src="../images/iconos/rss.png" alt="RSS" />
+            <img id="iconos" src="../images/iconos/twitter.png" alt="Twitter" />
+            <img
+              id="iconos"
+              src="../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img id="iconos" src="../images/iconos/insta.png" alt="Instagram" />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
+        </div>
       </div>
-      <div>
-         <a href="./informacion/invitados.html">Sobre nosotros</a> 
-      </div>
-      <div>
-        <a href="./informacion/invitados.html">Voluntariado</a> 
-     </div>
-     </div>
-      <div class="colabout">
-        <div>
-          <a href="./informacion/invitados.html">Contratación de stands</a> 
-       </div>
-      </div>
-    </div>
-     <div class="contacto">
-      <div class="contactos">
-          <img id="iconos" src="../images/iconos/rss.png" alt="RSS" />
-          <img id="iconos" src="../images/iconos/twitter.png" alt="Twitter" />
-          <img id="iconos" src="../images/iconos/facebook.png" alt="Facebook" />
-          <img id="iconos" src="../images/iconos/insta.png" alt="Instagram" />
-      </div>
-      <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-    </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
   </body>
 </html>
