--- a/informacion/bases/torneos.html
+++ b/informacion/bases/torneos.html
@@ -320,28 +320,26 @@
               >
             </div>
             <div>
-              <a href="../../informacion/invitados.html">Sobre nosotros</a>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
             </div>
             <div>
-              <a href="../../informacion/invitados.html">Voluntariado</a>
-            </div>
-          </div>
-          <div class="colabout">
-            <div>
-              <a href="../../informacion/invitados.html"
-                >Contratación de stands</a
-              >
-            </div>
-            <div>
-              <a href="torneos.html">Bases de Torneos</a>
-            </div>
-            <div>
-              <a href="concurso.html">Bases de Cocursos</a>
+              <a href="../informacion/invitados.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
             <div>
-              <a href="politica.html"
+              <a href="./invitados.html">Contratación de stands</a>
+            </div>
+            <div>
+              <a href="./torneos.html">Bases de Torneos</a>
+            </div>
+            <div>
+              <a href="./concursos.html">Bases de Concursos</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./politica.html"
                 >Política de privacidad y protección de datos</a
               >
             </div>
