--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -150,6 +150,19 @@
             <div>
               <a href="./informacion/invitados.html">Contratación de stands</a>
             </div>
+            <div>
+              <a href="./bases/torneos.html">Bases de Torneos</a>
+            </div>
+            <div>
+              <a href="./bases/concursos.html">Bases de Concursos</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./bases/politica.html"
+                >Política de privacidad y protección de datos</a
+              >
+            </div>
           </div>
         </div>
         <div class="contacto">
