--- a/informacion/bases/concursos.html
+++ b/informacion/bases/concursos.html
@@ -65,32 +65,7 @@
         <div class="content">
           <article>
             <h1>
-              1.Inscripción
-            </h1>
-            <ul>
-              <li>
-                La inscripción en los torneos de videojuegos es libre y gratuita
-                para cualquier asistente al evento que haya adquirido su entrada
-              </li>
-              <li>
-                Las inscripciones se realizarán de manera presencial durante los
-                días del evento y estarán disponibles hasta media hora antes del
-                comienzo de cada uno en el stand asignado para ello.
-              </li>
-
-              <li>
-                Los torneos tienen plazas limitadas de 32 participantes.
-              </li>
-              <li>
-                Los asistentes al evento solo podrán inscribirse en los torneos
-                que se realicen durante la jornada que se esté desarrollando.
-              </li>
-              <li>
-                No existen plazas de reserva para ninguno de los torneos.
-              </li>
-            </ul>
-            <h1>
-              1.Inscripción
+              Asian Cover Dance
             </h1>
             <ul>
               <li>
@@ -117,7 +92,7 @@
           </article>
           <article>
             <h1>
-              2.Normas generales
+              Pop Culture Hiroshima
             </h1>
             <ul>
               <li>
@@ -161,7 +136,7 @@
           </article>
           <article>
             <h1>
-              3.Normas específicas para Tekken
+              Karaoke
             </h1>
             <ul>
               <li>
@@ -192,145 +167,6 @@
               </li>
             </ul>
           </article>
-          <article>
-            <h1>
-              4.Normas específicas para Super Smash Bros
-            </h1>
-            <ul>
-              <li>
-                Los combates se disputarán al mejor de 3 vidas entre cuatro
-                jugadores.
-              </li>
-              <li>
-                La final se jugará entre 4 jugadores y al mejor de 5 vidas.
-              </li>
-              <li>
-                El escenario para todos los encuentros será “Destino Final”.
-              </li>
-              <li>
-                Pausar el juego durante un round/combate supone la pérdida del
-                mismo.
-              </li>
-              <li>
-                Objetos: Ninguno.
-              </li>
-            </ul>
-          </article>
-          <article>
-            <h1>
-              5.Normas específicas para FIFA
-            </h1>
-            <ul>
-              <li>
-                El tiempo predeterminado de cada parte será de 5 minutos.
-              </li>
-              <li>
-                La configuración de botones será la que el propio juego de a
-                elegir al comienzo de cada encuentro. Debiendo ser está
-                configurada en el menú de selección de lado antes del comienzo
-                de cada partido
-              </li>
-              <li>
-                La cámara del partido será “modo grúa”.
-              </li>
-              <li>
-                El resto de opciones del partido serán las predeterminadas.
-              </li>
-              <li>
-                Se dispone de un minuto para configurar la alineación.
-              </li>
-              <li>
-                Se puede cambiar de equipo para cada encuentro.
-              </li>
-            </ul>
-          </article>
-          <article>
-            <h1>
-              6.Normas específicas para YuGiOh
-            </h1>
-            <ul>
-              <li>
-                Se admitirán los nuevos monstruos Exceed. La lista de cartas
-                prohibidas es la siguiente:
-                <a href="http://www.yugioh-card.com/es/limited/"
-                  >http://www.yugioh-card.com/es/limited/</a
-                >
-              </li>
-              <li>
-                Los mazos deberán contener un mínimo de 40 cartas y un máximo de
-                60 cartas.
-              </li>
-              <li>
-                Las partidas se decidirán a tres rondas.
-              </li>
-            </ul>
-          </article>
-          <article>
-            <h1>
-              7.Normas específicas para Magic
-            </h1>
-            <ul>
-              <li>
-                Todos los jugadores disputarán partidas entre sí en grupos de
-                cuatro o dos, con un número de rondas que variará en función de
-                los participantes inscritos. Al terminar, los cuatro primeros
-                clasificados disputarán partidas a modo de semifinal, y los
-                ganadores de ambas partidas se enfrentarán entre sí por el
-                primer puesto.
-              </li>
-              <li>
-                La modalidad de juego será formato Legacy donde podéis tener
-                cualquier tipo de edición, especiales, etc. Podéis encontrar la
-                lista de cartas prohibidas aquí
-                <a
-                  href="http://www.wizards.com/Magic/TCG/Resources.aspx?x=judge/resources/sfrlegacy"
-                  >http://www.wizards.com/Magic/TCG/Resources.aspx?x=judge/resources/sfrlegacy</a
-                >
-              </li>
-              <li>
-                Los mazos deberán contener un mínimo de 60 cartas sin límite
-                fijado.
-              </li>
-              <li>
-                Todas las partidas se decidirá el ganador al mejor de tres
-                rondas. En caso de no terminar el juego, se decidirá en cinco
-                turnos más.
-              </li>
-            </ul>
-          </article>
-          <article>
-            <h1>
-              8.Normas específicas de LOL
-            </h1>
-            <ul>
-              <li>
-                Será necesario acudir a los encuentros con al menos 15 minutos
-                de antelación antes de la celebración del encuentro asignado.
-              </li>
-              <li>
-                Para participar es imprescindible que se presente el equipo
-                completo; no es necesario en ningún caso ser vecino de la
-                ciudad, podéis trasladaros al evento y participar.
-              </li>
-              <li>
-                El capitán del equipo ha de contar con el consentimiento expreso
-                de todos los integrantes de su equipo y no cumplir esta norma
-                conllevará la descalificación del equipo en cuestión.
-              </li>
-              <li>
-                Asimismo, para poder participar, todos los jugadores han de
-                tener cuenta activa en los servidores Europeos de League of
-                Legends y nivel de Invocador 30, así como un mínimo de 16
-                Campeones en propiedad (normas del modo reclutamiento).
-              </li>
-              <li>
-                La inscripción deberá ser realizada online en el formulario que
-                se encuentra al final de la página en la que se anuncian los
-                torneos de cada edición del Salón, y una vez realizada no podrá
-                ser modificada.
-              </li>
-            </ul>
-          </article>
         </div>
       </div>
     </main>
@@ -345,28 +181,26 @@
               >
             </div>
             <div>
-              <a href="../../informacion/invitados.html">Sobre nosotros</a>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
             </div>
             <div>
-              <a href="../../informacion/invitados.html">Voluntariado</a>
-            </div>
-          </div>
-          <div class="colabout">
-            <div>
-              <a href="../../informacion/invitados.html"
-                >Contratación de stands</a
-              >
-            </div>
-            <div>
-              <a href="torneos.html">Bases de Torneos</a>
-            </div>
-            <div>
-              <a href="concurso.html">Bases de Cocursos</a>
+              <a href="../informacion/invitados.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
             <div>
-              <a href="politica.html"
+              <a href="./invitados.html">Contratación de stands</a>
+            </div>
+            <div>
+              <a href="./torneos.html">Bases de Torneos</a>
+            </div>
+            <div>
+              <a href="./concursos.html">Bases de Concursos</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./politica.html"
                 >Política de privacidad y protección de datos</a
               >
             </div>
