--- a/informacion/invitados/faky.html
+++ b/informacion/invitados/faky.html
@@ -158,12 +158,25 @@
               <a href="./informacion/invitados.html">Sobre nosotros</a>
             </div>
             <div>
-              <a href="./informacion/invitados.html">Voluntariado</a>
+              <a href="../informacion/invitados.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
             <div>
-              <a href="./informacion/invitados.html">Contratación de stands</a>
+              <a href="./invitados.html">Contratación de stands</a>
+            </div>
+            <div>
+              <a href="../bases/torneos.html">Bases de Torneos</a>
+            </div>
+            <div>
+              <a href="../bases/concursos.html">Bases de Concursos</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="../bases/politica.html"
+                >Política de privacidad y protección de datos</a
+              >
             </div>
           </div>
         </div>
