--- a/localizacion/localizacion.html
+++ b/localizacion/localizacion.html
@@ -80,16 +80,16 @@
             </h1>
             <p>
               El Complejo Deportivo, situada en el marco natural e incomparable
-              de Puerto Real, es un espacio con identidad propia. Ha
-              integrado su singularidad a numerosos actos privados y
-              corporativos, sorprendiendo y maravillando a los asistentes de
-              estos eventos. Con 300 m<sup>2</sup> repartidos en 3 plazas en diferentes
-              niveles. 
+              de Puerto Real, es un espacio con identidad propia. Ha integrado
+              su singularidad a numerosos actos privados y corporativos,
+              sorprendiendo y maravillando a los asistentes de estos eventos.
+              Con 300 m<sup>2</sup> repartidos en 3 plazas en diferentes
+              niveles.
             </p>
             <p>
-              Un espacio ideal para la celebración de actos al aire
-              libre como recepciones, cenas o exhibiciones deportivas, así como
-              también sesiones fotográficas, debido a que se trata de un espacio
+              Un espacio ideal para la celebración de actos al aire libre como
+              recepciones, cenas o exhibiciones deportivas, así como también
+              sesiones fotográficas, debido a que se trata de un espacio
               emblemático con unas vistas panorámicas únicas.
             </p>
           </article>
@@ -140,7 +140,22 @@
           </div>
           <div class="colabout">
             <div>
-              <a href="./informacion/invitados.html">Contratación de stands</a>
+              <a href="../informacion/invitados.html">Contratación de stands</a>
+            </div>
+            <div>
+              <a href="../informacion/bases/torneos.html">Bases de Torneos</a>
+            </div>
+            <div>
+              <a href="../informacion/bases/concursos.html"
+                >Bases de Concursos</a
+              >
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="../informacion/bases/politica.html"
+                >Política de privacidad y protección de datos</a
+              >
             </div>
           </div>
         </div>
