--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -79,12 +79,14 @@
               <p>Música</p>
             </div>
             <div id="titlesActivity">
-              FAKI
+              Conciertos
             </div>
             <div id="description">
               <p>
-                El grupo de pop que más lo está petando en Japón, con doble
-                concierto por primera vez en Europa.
+                ¡Disfruta de la música internacional en directo en exclusiva en
+                Manguca! De 8 a 9 y media en nuestro escenario principal.
+                Consulta el horario y nuestros artistas invitados para saber
+                más.
               </p>
             </div>
           </div>
@@ -94,15 +96,16 @@
           <img id="miniatureInvert" src="../images/actividades/activity2.jpg" />
           <div class="text" id="textInvert">
             <div id="rol">
-              <p>Música</p>
+              <p>Exposición</p>
             </div>
             <div id="titlesActivity">
-              FAKI
+              Coches tunning temáticos
             </div>
             <div id="description">
               <p>
-                El grupo de pop que más lo está petando en Japón, con doble
-                concierto por primera vez en Europa.
+                Pásate el último día de Manguca a pasear por el recinto y ver
+                esta maravillosa exposición en exclusiva. Coches con temática
+                anime o sobre videojuegos.
               </p>
             </div>
           </div>
@@ -111,15 +114,98 @@
           <img id="miniature" src="../images/actividades/activity3.png" />
           <div class="text">
             <div id="rol">
-              <p>Música</p>
+              <p>Juegos</p>
             </div>
             <div id="titlesActivity">
-              FAKI
+              Torneos
             </div>
             <div id="description">
               <p>
-                El grupo de pop que más lo está petando en Japón, con doble
-                concierto por primera vez en Europa.
+                ¿Eres un apasionado de los videojuegos o los juegos de mesa?
+                Seas todo un maestro o si acabas de empezar, estás invitado a
+                nuestros torneos diarios. ¡Apúntante, conoce gente y gana
+                fantásticos premios! Contamos con torneos de: Cartas Yu-Gi-Oh,
+                Magic, Pokémon y los juegos Tekken, League of Legends, Super
+                Smash Bros y FIFA.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="activity" id="invert">
+          <img id="miniatureInvert" src="../images/actividades/activity6.jpg" />
+          <div class="text" id="textInvert">
+            <div id="rol">
+              <p>Social</p>
+            </div>
+            <div id="titlesActivity">
+              Bodas otakus
+            </div>
+            <div id="description">
+              <p>
+                ¿Sientes que estás muy unido a tu almohada impresa? Entonces, no
+                te pierdas nuestro evento más popular y rompedor: tráela y os
+                casaremos en una bonita ceremonia al que asistirá como público
+                tus amigos y/o las almohadas que elijas de entre nuestra
+                disponibilidad. Como alternativa, también puedes casarte con una
+                persona real.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="activity">
+          <img id="miniature" src="../images/actividades/activity7.jpg" />
+          <div class="text">
+            <div id="rol">
+              <p>Formación y entretenimiento</p>
+            </div>
+            <div id="titlesActivity">
+              Talleres
+            </div>
+            <div id="description">
+              <p>
+                ¡No habrá ni un minuto en el que te quedes quieto en esta
+                edición de Manguca! Asiste a nuestros talleres, desde clases
+                profesionales con nuestros invitados, hasta nuestra zona de Hama
+                Beads. Consulta los horarios, ¡no te lo pierdas!.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="activity" id="invert">
+          <img id="miniatureInvert" src="../images/actividades/activity8.jpg" />
+          <div class="text" id="textInvert">
+            <div id="rol">
+              <p>Social</p>
+            </div>
+            <div id="titlesActivity">
+              Charlas
+            </div>
+            <div id="description">
+              <p>
+                Aprende escuchando a nuestros invitados en tu campo favorito. En
+                esta edición contamos con el invitado estrella Nate Gentile, un
+                prodigio de la informática.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="activity">
+          <img id="miniature" src="../images/actividades/activity9.jpg" />
+          <div class="text">
+            <div id="rol">
+              <p>Social</p>
+            </div>
+            <div id="titlesActivity">
+              Firmas
+            </div>
+            <div id="description">
+              <p>
+                ¡No te vayas de esta edición de Manguca sin conocer de cerca a
+                tus personalidades favoritas!
               </p>
             </div>
           </div>
