--- a/informacion/bases/concursos.html
+++ b/informacion/bases/concursos.html
@@ -63,10 +63,10 @@
     <main>
       <div class="main">
         <div class="content">
-          <article>
-            <h1>
-              Asian Cover Dance
-            </h1>
+          <button class="accordion">
+            Asian Cover Dance
+          </button>
+          <div class="panel">
             <ul>
               <li>
                 La participación en el concurso implica la aceptación de las
@@ -184,11 +184,11 @@
                 descalificación del mismo.
               </li>
             </ul>
-          </article>
-          <article>
-            <h1>
-              Pop Culture Hiroshima
-            </h1>
+          </div>
+          <button class="accordion">
+            Pop Culture Hiroshima
+          </button>
+          <div class="panel">
             <ul>
               <li>
                 Los participantes deberán haber cumplido la mayoría de edad.
@@ -465,11 +465,11 @@
                 uno de cada color para evitar confusiones.
               </li>
             </ul>
-          </article>
-          <article>
-            <h1>
-              Karaoke
-            </h1>
+          </div>
+          <button class="accordion">
+            Karaoke
+          </button>
+          <div class="panel">
             <h2>
               Inscripción
             </h2>
@@ -567,7 +567,7 @@
                 Tercer premio: 25€
               </li>
             </ul>
-          </article>
+          </div>
         </div>
       </div>
     </main>
@@ -630,5 +630,6 @@
         </div>
       </div>
     </footer>
+    <script src="../../js/acordeon.js"></script>
   </body>
 </html>
