--- a/informacion/bases/politica.html
+++ b/informacion/bases/politica.html
@@ -63,10 +63,8 @@
     <main>
       <div class="main">
         <div class="content">
-          <article>
-            <h1>
-              1.INFORMACIÓN Y CONSENTIMIENTO.
-            </h1>
+          <button class="accordion">1. INFORMACIÓN Y CONSENTIMIENTO.</button>
+          <div class="panel">
             <p>
               Mediante la aceptación de la presente Política de Privacidad, el
               Usuario queda informado y presta su consentimiento libre,
@@ -74,25 +72,12 @@
               que facilite a través de esta página Web (en adelante, el “Sitio
               Web”) sean tratados por MANGUCA S.L.
             </p>
-          </article>
-          <article>
-            <h1>
-              2.OBLIGATORIEDAD DE FACILITAR LOS DATOS.
-            </h1>
-            <p>
-              Los datos solicitados en los formularios de la Web son con
-              carácter general, obligatorios (salvo que en el campo requerido se
-              especifique lo contrario) para cumplir con las finalidades
-              establecidas. Por lo tanto, si no se facilitan los mismos o no se
-              facilitan correctamente no podrán atenderse las mismas, sin
-              perjuicio de que podrá visualizar libremente el contenido del
-              Sitio Web.
-            </p>
-          </article>
-          <article>
-            <h1>
-              3.¿QUÉ DATOS DEL USUARIO SE TRATARÁ?
-            </h1>
+          </div>
+
+          <button class="accordion">
+            2. OBLIGATORIEDAD DE FACILITAR LOS DATOS.
+          </button>
+          <div class="panel">
             <p>
               MANGUCA S.L. tratará las siguientes categorías de datos del
               Usuario:
@@ -109,12 +94,25 @@
                 Datos de facturación.
               </li>
             </ul>
-          </article>
-          <article>
-            <h1>
-              4.¿CUÁL ES LA LEGITIMACIÓN DEL TRATAMIENTO DE LOS DATOS DEL
-              USUARIO?
-            </h1>
+          </div>
+
+          <button class="accordion">
+            3. ¿QUÉ DATOS DEL USUARIO SE TRATARÁ?
+          </button>
+          <div class="panel">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+
+          <button class="accordion">
+            4. ¿CUÁL ES LA LEGITIMACIÓN DEL TRATAMIENTO DE LOS DATOS DEL
+            USUARIO?
+          </button>
+          <div class="panel">
             <p>
               El tratamiento de los datos del Usuario por parte de MANGUCA S.L.
               está basado en el consentimiento que se le solicita y que puede
@@ -124,20 +122,20 @@
               las finalidades mencionadas son independientes por lo que el
               Usuario podrá revocar solo uno de ellos no afectando a los demás.
             </p>
-          </article>
-          <article>
-            <h1>
-              5.¿A QUÉ DESTINATARIOS SE COMUNICARÁN LOS DATOS DEL USUARIO?
-            </h1>
+          </div>
+          <button class="accordion">
+            5. ¿A QUÉ DESTINATARIOS SE COMUNICARÁN LOS DATOS DEL USUARIO?
+          </button>
+          <div class="panel">
             <p>
               Los datos del Usuario no serán comunicados a ninguna otra empresa,
               salvo obligación legal.
             </p>
-          </article>
-          <article>
-            <h1>
-              6.RESPONSABILIDAD DEL USUARIO.
-            </h1>
+          </div>
+          <button class="accordion">
+            6. RESPONSABILIDAD DEL USUARIO.
+          </button>
+          <div class="panel">
             <p>
               El Usuario:
             </p>
@@ -157,11 +155,11 @@
                 terceros.
               </li>
             </ul>
-          </article>
-          <article>
-            <h1>
-              7.COMUNICACIONES COMERCIALES Y PROMOCIONALES.
-            </h1>
+          </div>
+          <button class="accordion">
+            7. COMUNICACIONES COMERCIALES Y PROMOCIONALES.
+          </button>
+          <div class="panel">
             <p>
               Una de las finalidades para las que MANGUCA S.L. trata los datos
               personales proporcionados por parte de los Usuarios es para
@@ -176,11 +174,11 @@
                 >ucamanguca@gmail.com</a
               >
             </p>
-          </article>
-          <article>
-            <h1>
-              8.MEDIDAS DE SEGURIDAD.
-            </h1>
+          </div>
+          <button class="accordion">
+            8. MEDIDAS DE SEGURIDAD.
+          </button>
+          <div class="panel">
             <p>
               MANGUCA S.L. tratará los datos del Usuario en todo momento de
               forma absolutamente confidencial y guardando el preceptivo deber
@@ -192,7 +190,7 @@
               tecnología, la naturaleza de los datos almacenados y los riesgos a
               que están expuestos.
             </p>
-          </article>
+          </div>
         </div>
       </div>
     </main>
@@ -255,5 +253,6 @@
         </div>
       </div>
     </footer>
+    <script src="../../js/acordeon.js"></script>
   </body>
 </html>
