--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -76,7 +76,7 @@
           <img id="miniature" src="../images/concursos/concurso1.jpg" />
           <div class="text">
             <div id="rol">
-              <p>Música</p>
+              <p>Cosplay</p>
             </div>
             <div id="titlesActivity">
               Asian cover Dance
@@ -94,7 +94,7 @@
           <img id="miniatureInvert" src="../images/concursos/concurso2.jpg" />
           <div class="text" id="textInvert">
             <div id="rol">
-              <p>Música</p>
+              <p>Cosplay</p>
             </div>
             <div id="titlesActivity">
               Pop Culture Hiroshima
@@ -123,6 +123,26 @@
               <p>
                 ¡Demuestra tus dotes musicales en nuestro concurso de karaoke y
                 llévate grandes premios!
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="activity" id="invert">
+          <img id="miniatureInvert" src="../images/concursos/concurso4.jpg" />
+          <div class="text" id="textInvert">
+            <div id="rol">
+              <p>Cosplay</p>
+            </div>
+            <div id="titlesActivity">
+              Pasarela Cosplay
+            </div>
+            <div id="description">
+              <p>
+                Todos los cosplayers estáis invitados a subiros a nuestro
+                escenario individual a hacernos una demostración de vuestro
+                cosplay y hablarnos sobre él. ¡Además, contamos con fotógrafos
+                profesionales!.
               </p>
             </div>
           </div>
