--- a/informacion/bases/torneos.html
+++ b/informacion/bases/torneos.html
@@ -63,10 +63,10 @@
     <main>
       <div class="main">
         <div class="content">
-          <article>
-            <h1>
-              1.Inscripción
-            </h1>
+          <button class="accordion">
+            1. Inscripción
+          </button>
+          <div class="panel">
             <ul>
               <li>
                 La inscripción en los torneos de videojuegos es libre y gratuita
@@ -89,11 +89,11 @@
                 No existen plazas de reserva para ninguno de los torneos.
               </li>
             </ul>
-          </article>
-          <article>
-            <h1>
-              2.Normas generales
-            </h1>
+          </div>
+          <button class="accordion">
+            2. Normas generales
+          </button>
+          <div class="panel">
             <ul>
               <li>
                 Los participantes de los torneos deben presentarse al menos 15
@@ -133,11 +133,11 @@
                 establecido para cada torneo.
               </li>
             </ul>
-          </article>
-          <article>
-            <h1>
-              3.Normas específicas para Tekken
-            </h1>
+          </div>
+          <button class="accordion">
+            3. Normas específicas para Tekken
+          </button>
+          <div class="panel">
             <ul>
               <li>
                 Los juegos de lucha se disputarán al mejor de 3 rounds/vidas y
@@ -166,11 +166,11 @@
                 Se permite cambiar de personaje para cada partida.
               </li>
             </ul>
-          </article>
-          <article>
-            <h1>
-              4.Normas específicas para Super Smash Bros
-            </h1>
+          </div>
+          <button class="accordion">
+            4. Normas específicas para Super Smash Bros
+          </button>
+          <div class="panel">
             <ul>
               <li>
                 Los combates se disputarán al mejor de 3 vidas entre cuatro
@@ -190,11 +190,11 @@
                 Objetos: Ninguno.
               </li>
             </ul>
-          </article>
-          <article>
-            <h1>
-              5.Normas específicas para FIFA
-            </h1>
+          </div>
+          <button class="accordion">
+            5. Normas específicas para FIFA
+          </button>
+          <div class="panel">
             <ul>
               <li>
                 El tiempo predeterminado de cada parte será de 5 minutos.
@@ -218,11 +218,11 @@
                 Se puede cambiar de equipo para cada encuentro.
               </li>
             </ul>
-          </article>
-          <article>
-            <h1>
-              6.Normas específicas para YuGiOh
-            </h1>
+          </div>
+          <button class="accordion">
+            6. Normas específicas para YuGiOh
+          </button>
+          <div class="panel">
             <ul>
               <li>
                 Se admitirán los nuevos monstruos Exceed. La lista de cartas
@@ -239,11 +239,11 @@
                 Las partidas se decidirán a tres rondas.
               </li>
             </ul>
-          </article>
-          <article>
-            <h1>
-              7.Normas específicas para Magic
-            </h1>
+          </div>
+          <button class="accordion">
+            7. Normas específicas para Magic
+          </button>
+          <div class="panel">
             <ul>
               <li>
                 Todos los jugadores disputarán partidas entre sí en grupos de
@@ -272,11 +272,11 @@
                 turnos más.
               </li>
             </ul>
-          </article>
-          <article>
-            <h1>
-              8.Normas específicas de LOL
-            </h1>
+          </div>
+          <button class="accordion">
+            8. Normas específicas de LOL
+          </button>
+          <div class="panel">
             <ul>
               <li>
                 Será necesario acudir a los encuentros con al menos 15 minutos
@@ -305,7 +305,7 @@
                 ser modificada.
               </li>
             </ul>
-          </article>
+          </div>
         </div>
       </div>
     </main>
@@ -368,5 +368,6 @@
         </div>
       </div>
     </footer>
+    <script src="../../js/acordeon.js"></script>
   </body>
 </html>
