--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <a href="./informacion/invitados.html">Sobre nosotros</a>
             </div>
             <div>
-              <a href="./informacion/invitados.html">Voluntariado</a>
+              <a href="./informacion/bases/voluntariado.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
